# commonItems

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BulkParser.cpp  BulkParser.h  CMakeLists.txt  CODEOWNERS  CTReParser.cpp  CTReParser.h  CardinalToOrdinal.cpp  CardinalToOrdinal.h  Color.cpp  Color.h  CommonFunctions.cpp  CommonFunctions.h  CommonRegexes.cpp  CommonRegexes.h  CommonUtils.cpp  ConvenientParser.cpp  ConvenientParser.h  ConverterVersion.cpp  ConverterVersion.h  Date.cpp  Date.h  GameVersion.cpp  GameVersion.h  LICENSE  LinuxUtils.cpp  Log.cpp  Log.h  OSCommonLayer.cpp  OSCompatibilityLayer.h  Object.cpp  Object.h  ParadoxParser8859_15.cpp  ParadoxParserUTF8.cpp  Parser.cpp  Parser.h  ParserHelpers.cpp  (+19 more)
.github/workflows/: clang-format-check.yml  codeql-analysis.yml  linux_codeql-analysis.yml  linux_coverage.yml  publish_commit_id.yml  windows_build_and_test.yml  windows_cmake_build.yml
CommonItems/: CommonItems.vcxproj  CommonItems.vcxproj.filters
Linguistics/: StringExtensions.cpp  StringExtensions.h  StringExtensionsTests.cpp  adjectives.txt
Localization/: LocalizationBlock.cpp  LocalizationBlock.h  LocalizationDatabase.cpp  LocalizationDatabase.h  LocalizationLambdas.h
ModLoader/: Mod.h  ModFilesystem.cpp  ModFilesystem.h  ModLoader.cpp  ModLoader.h  ModParser.cpp  ModParser.h
cmake/: commonItemsConfig.cmake.in
pch/: pch.h  pch.vcxproj
tests/: CMakeLists.txt  CardinalToOrdinalTests.cpp  ColorTests.cpp  CommonFunctionsTests.cpp  CommonItemsTests.sln  CommonItemsTests.sln.DotSettings  CommonItemsTests.vcxproj  CommonItemsTests.vcxproj.filters  CommonRegexesTests.cpp  ConvenientParserTests.cpp  ConverterVersionTests.cpp  DateTests.cpp  GameVersionTests.cpp  LogTests.cpp  ModFilesystemTests.cpp  ModLoaderTests.cpp  ModParserTests.cpp  ParserHelperTests.cpp  ParserTests.cpp  StringUtilsTests.cpp  VersionTests.cpp  build_linux.sh  iconvliteTests.cpp  newColorTests.cpp  test_main.cpp  version.txt
tests/Localization/: LocalizationBlockTests.cpp  LocalizationDatabaseTests.cpp
tests/TestFiles/: BrokenLog.txt  BrokenMe.txt  ChangeLog.txt  Readme.txt  broken-settings.json  broken-settings2.json  changed-settings.json  clausewitz_branch.txt  clausewitz_branch_broken.txt  clausewitz_branch_broken2.txt  clausewitz_rev.txt  launcher-settings-1.37.json  rome-settings.json  version.txt
tests/TestFiles/529340/: the_mod_two.mod
tests/TestFiles/GameDocumentsFolder/mod/: brokenpacked.mod  parseable_mod_file.mod  themod.mod
tests/TestFiles/GameDocumentsFolder/mod/parseable_metadata/.metadata/: metadata.json
tests/TestFiles/GameDocumentsFolder/mod/the_metadata_mod/localization/: zzz_vanilla_override.yml
tests/TestFiles/SteamModsFolder/529340/the_metadata_mod_two/.metadata/: metadata.json
tests/TestFiles/game/localization/: textfile_l_english.txt  vanilla_l_broken.yml  vanilla_l_english.yml  vanilla_l_french.yml
tests/TestFiles/mod/: themod.mod
tests/TestFiles/mod/the_metadata_mod/.metadata/: metadata.json
tools/: generate_coverage_report.sh
zip/: zip.vcxproj  zip.vcxproj.filters
